--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,3 +1,5 @@
-name = "edge-rewriter"
-main = "src/worker.js"
-compatibility_date = "2025-08-26"
+{
+  "name": "edge-rewriter",
+  "main": "src/worker.js",
+  "compatibility_date": "2025-08-26"
+}
