--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,5 +1,6 @@
-{
-  "name": "edge-rewriter",
-  "main": "src/worker.js",
-  "compatibility_date": "2025-08-26"
-}
+name = "edge-rewriter"
+main = "src/worker.js"
+compatibility_date = "2025-08-26"
+
+# Serve the static frontend too (optional; comment out if you don’t want it)
+assets = { directory = "./public" }
