--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,5 +1,5 @@
 {
   "name": "edge-rewriter",
   "main": "src/worker.js",
-  "compatibility_date": "2025-08-26",
+  "compatibility_date": "2025-08-26"
 }
