--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -4,7 +4,6 @@
   "compatibility_date": "2025-09-13",
   "compatibility_flags": ["nodejs_compat"],
   "workers_dev": true,
-  // no ALLOWED_HOSTS variable, so all hosts allowed
   "vars": {},
 
   "kv_namespaces": [
@@ -26,12 +25,11 @@
   "env": {
     "dev": {
       "name": "edgeproxy-dev",
-      "route": "",
       "workers_dev": true
     },
     "prod": {
       "name": "edgeproxy-prod",
-      "route": "",
+      "route": "", // replace with real domain when ready
       "workers_dev": false,
       "kv_namespaces": [
         {
