--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,16 +1,23 @@
-name = "edgeproxy-ultimate"
-main = "src/edgeproxy-ultimate.js"
+name = "edgeproxy"
+main = "src/worker.js"
 compatibility_date = "2025-09-13"
 workers_dev = true
 
-# env vars
+# KV namespace binding
+[[kv_namespaces]]
+binding = "RATE_KV"
+id = "uSRJDR6vbeZRNm5G2iLdTweg2FNG9Z4xTdnJTTNP"  # <-- your KV ID
+
+# Environment variables
 [vars]
-API_KEY = "Potato"
-ALLOWED_HOSTS = ""      # blank = allow all
+API_KEY = "ccported"  # <-- pick any secret key
+ALLOWED_HOSTS = ""           # blank = allow all hosts
 MAX_REWRITE_BYTES = "1000000"
 CACHE_TTL = "3600"
 
-# KV namespace for rate limiting
-[[kv_namespaces]]
-binding = "RATE_KV"
-id = "uSRJDR6vbeZRNm5G2iLdTweg2FNG9Z4xTdnJTTNP"
+# Optional: separate environments
+[env.dev]
+workers_dev = true
+
+[env.prod]
+workers_dev = false
